Added tile grid component.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,12 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+
+    --space: 1rem;
+
+    @screen sm {
+      --space: 1.5rem;
+    }
   }
 
   .dark {
